@@ -1,3 +1,4 @@
+#include <map>
 #include "Variables.h"
 #include <string>
 
@@ -10,20 +11,13 @@ Variables::Variables()
 {
 	lasterror = ERROR_NONE;
 	// initialize variable storage
-	for (int i = 0; i < VARIABLE_NUMVARS; i++)
-	{
-		vars[i].type = T_UNUSED;
-		vars[i].value.floatval = 0;
-		vars[i].value.string = NULL;
-		vars[i].value.arr = NULL;
-	}
 }
 
 Variables::~Variables()
 {
 	lasterror = ERROR_NONE;
 	// free variables and all storage
-
+	clear();
 }
 
 int Variables::error() {
@@ -34,101 +28,139 @@ void
 Variables::clear()
 {
 	lasterror = ERROR_NONE;
-	// free all variables - string and arrays
-	for (int i = 0; i < VARIABLE_NUMVARS; i++)
-	{
-		if (vars[i].type != T_UNUSED) clearvariable(i);
+	// erase all variables
+	while(!varmap.empty()) {
+		std::map<int, variable*>::iterator i=varmap.begin();
+		clearvariable((*i).second);
+		varmap.erase((*i).first);
 	}
 }
 
 
-void
-Variables::clearvariable(int varnum)
+void Variables::clearvariable(variable* v)
 {
-	// free a single variable
-	if (vars[varnum].type == T_STRING && vars[varnum].value.string != NULL)
-	{
-		free(vars[varnum].value.string);
-		vars[varnum].value.string = NULL;
+	// free a variable's current value to allow it to be reassigned
+	if (v->type == T_UNUSED) {
+	} else if (v->type == T_STRING && v->value.string != NULL) {
+		free(v->value.string);
+		v->value.string = NULL;
 	}
-	else if (vars[varnum].type == T_ARRAY && vars[varnum].value.arr != NULL)
-	{
-		delete(vars[varnum].value.arr->data.fdata);
-		delete(vars[varnum].value.arr);
+	else if (v->type == T_ARRAY && v->value.arr != NULL) {
+		delete(v->value.arr->data.fdata);
+		delete(v->value.arr);
+		v->value.arr = NULL;
 	}
-	else if (vars[varnum].type == T_STRARRAY && vars[varnum].value.arr != NULL)
-	{
-		for (int j = 0; j < vars[varnum].value.arr->size; j++)
-		{
-			if (vars[varnum].value.arr->data.sdata[j])
-			{
-				free(vars[varnum].value.arr->data.sdata[j]);
-				vars[varnum].value.arr->data.sdata[j] = NULL;
+	else if (v->type == T_STRARRAY && v->value.arr != NULL)	{
+		for (int j = 0; j < v->value.arr->size; j++) {
+			if (v->value.arr->data.sdata[j]) {
+				free(v->value.arr->data.sdata[j]);
+				v->value.arr->data.sdata[j] = NULL;
 			}
 		}
-		delete(vars[varnum].value.arr->data.sdata);
-		delete(vars[varnum].value.arr);
+		delete(v->value.arr->data.sdata);
+		delete(v->value.arr);
+		v->value.arr = NULL;
 	}
-	vars[varnum].type = T_UNUSED;
-	vars[varnum].value.floatval = 0;
-	vars[varnum].value.string = NULL;
-	vars[varnum].value.arr = NULL;
+}
+
+variable* Variables::getvfromnum(int varnum, bool makenew) {
+	// get v from map else return NULL
+	// if makenew then make a new one if not exist
+	variable *v;
+	std::map<int, variable*>::iterator i = varmap.find(varnum);
+	if(i==varmap.end()) {
+		if(makenew) {
+			v = new variable;
+			v->type = T_UNUSED;
+			v->value.floatval = 0;
+			v->value.string = NULL;
+			v->value.arr = NULL;
+			varmap.insert( std::pair<int, variable*> (varnum, v) );
+			//printf("lastvar=%i size=%i\n", varnum, varmap.size());
+		} else {
+			v = NULL;
+		}
+	} else {
+		v = (*i).second;
+	}
+	return(v);
 }
 
 
 int Variables::type(int varnum)
 {
-	return(vars[varnum].type);
+	lasterror = ERROR_NONE;
+	variable *v = getvfromnum(varnum,false);
+	if(v) {
+		return(v->type);
+	} else {
+		lasterror = ERROR_NOSUCHVARIABLE;
+	}
+	return(T_UNUSED);
 }
 
 
 void Variables::setfloat(int varnum, double value)
 {
 	lasterror = ERROR_NONE;
-	if (vars[varnum].type != T_UNUSED) clearvariable(varnum);
-	vars[varnum].type = T_FLOAT;
-	vars[varnum].value.floatval = value;
+	variable *v = getvfromnum(varnum,true);
+	clearvariable(v);
+	v->type = T_FLOAT;
+	v->value.floatval = value;
 }
 
 double Variables::getfloat(int varnum)
 {
 	lasterror = ERROR_NONE;
-	if (vars[varnum].type == T_FLOAT) {
-		return(vars[varnum].value.floatval);
+	variable *v = getvfromnum(varnum,false);
+	if(v) {
+		if (v->type == T_FLOAT) {
+			return(v->value.floatval);
+		} else {
+			lasterror = ERROR_NOSUCHVARIABLE;
+		}
 	} else {
 		lasterror = ERROR_NOSUCHVARIABLE;
-		return(0);
 	}
+	return(0);
 }
 
 void Variables::setstring(int varnum, char *value)
 {
 	// pass pointer - copied when put on stack so this is a good pointer
-	if (vars[varnum].type != T_UNUSED) clearvariable(varnum);
-	vars[varnum].type = T_STRING;
-	vars[varnum].value.string = value;
+	lasterror = ERROR_NONE;
+	variable *v = getvfromnum(varnum,true);
+	clearvariable(v);
+	v->type = T_STRING;
+	v->value.string = value;
 }
 
 char *Variables::getstring(int varnum)
 {
 	// just return pointer - copied when put on stack so this is a good pointer
 	lasterror = ERROR_NONE;
-	if (vars[varnum].type == T_STRING) {
-		return(vars[varnum].value.string);
+	variable *v = getvfromnum(varnum,false);
+	if(v) {
+		if (v->type == T_STRING) {
+			return(v->value.string);
+		} else {
+			lasterror = ERROR_NOSUCHVARIABLE;
+		}
 	} else {
 		lasterror = ERROR_NOSUCHVARIABLE;
-		return(NULL);
 	}
+	return(NULL);
 }
 
 void Variables::arraydimfloat(int varnum, int xdim, int ydim, bool redim)
 {
+	variable *v = getvfromnum(varnum,true);
 	lasterror = ERROR_NONE;
 
 	// max number of elements to save on a redim
 	int redimsize = 0;
-	if(redim && vars[varnum].type==T_ARRAY) {
-		redimsize = vars[varnum].value.arr->size;	
+	if(redim && v->type==T_ARRAY) {
+		redimsize = v->value.arr->size;	
 	}
 	
 	int size = xdim * ydim;
@@ -138,20 +170,20 @@ void Variables::arraydimfloat(int varnum, int xdim, int ydim, bool redim)
 			double *d = new double[size];
 			for (int j = 0; j < size; j++) {
 				if(j < redimsize) {
-					d[j] = vars[varnum].value.arr->data.fdata[j];						
+					d[j] = v->value.arr->data.fdata[j];						
 				} else {
 					d[j] = 0;
 				}
 			}
 
-			if (vars[varnum].type != T_UNUSED) clearvariable(varnum);
+			clearvariable(v);
 
-			vars[varnum].type = T_ARRAY;
+			v->type = T_ARRAY;
 			a->data.fdata = d;
 			a->size = size;
 			a->xdim = xdim;
 			a->ydim = ydim;
-			vars[varnum].value.arr = a;
+			v->value.arr = a;
 		} else {
 			lasterror = ERROR_ARRAYSIZESMALL;
 		}
@@ -162,12 +194,13 @@ void Variables::arraydimfloat(int varnum, int xdim, int ydim, bool redim)
 
 void Variables::arraydimstring(int varnum, int xdim, int ydim, bool redim)
 {
+	variable *v = getvfromnum(varnum,true);
 	lasterror = ERROR_NONE;
 
 	// max number of elements to save on a redim
 	int redimsize = 0;
-	if(redim && vars[varnum].type==T_STRARRAY) {
-		redimsize = vars[varnum].value.arr->size;	
+	if(redim && v->type==T_STRARRAY) {
+		redimsize = v->value.arr->size;	
 	}
 	
 	int size = xdim * ydim;
@@ -177,21 +210,21 @@ void Variables::arraydimstring(int varnum, int xdim, int ydim, bool redim)
 			char **c = new char*[size];
 			for (int j = 0; j < size; j++) {
 				if(j < redimsize) {
-					c[j] = vars[varnum].value.arr->data.sdata[j];						
-					vars[varnum].value.arr->data.sdata[j]=NULL;	// so not free-d with moved to new array
+					c[j] = v->value.arr->data.sdata[j];						
+					v->value.arr->data.sdata[j]=NULL;	// so not free-d with moved to new array
 				} else {
 					c[j] = strdup("");
 				}
 			}
 
-			if (vars[varnum].type != T_UNUSED) clearvariable(varnum);
+			clearvariable(v);
 
-			vars[varnum].type = T_STRARRAY;
+			v->type = T_STRARRAY;
 			a->data.sdata = c;
 			a->size = size;
 			a->xdim = xdim;
 			a->ydim = ydim;
-			vars[varnum].value.arr = a;
+			v->value.arr = a;
 		} else {
 			lasterror = ERROR_ARRAYSIZESMALL;
 		}
@@ -204,11 +237,16 @@ int Variables::arraysize(int varnum)
 {
 	// return length of array as if it was a one dimensional array - 0 = not an array		
 	lasterror = ERROR_NONE;
-	if (vars[varnum].type == T_ARRAY || vars[varnum].type == T_STRARRAY)
-	{
-		return(vars[varnum].value.arr->size);
+	variable *v = getvfromnum(varnum,false);
+	if(v) {
+		if (v->type == T_ARRAY || v->type == T_STRARRAY)
+		{
+			return(v->value.arr->size);
+		} else {
+			lasterror = ERROR_NOTARRAY;
+		}
 	} else {
-		lasterror = ERROR_NOTARRAY;
+		lasterror = ERROR_NOSUCHVARIABLE;
 	}
 	return(0);
 }
@@ -217,11 +255,16 @@ int Variables::arraysizex(int varnum)
 {
 	// return number of columns of array as if it was a two dimensional array - 0 = not an array		
 	lasterror = ERROR_NONE;
-	if (vars[varnum].type == T_ARRAY || vars[varnum].type == T_STRARRAY)
-	{
-		return(vars[varnum].value.arr->xdim);
+	variable *v = getvfromnum(varnum,false);
+	if(v) {
+		if (v->type == T_ARRAY || v->type == T_STRARRAY)
+		{
+			return(v->value.arr->xdim);
+		} else {
+			lasterror = ERROR_NOTARRAY;
+		}
 	} else {
-		lasterror = ERROR_NOTARRAY;
+		lasterror = ERROR_NOSUCHVARIABLE;
 	}
 	return(0);
 }
@@ -230,11 +273,16 @@ int Variables::arraysizey(int varnum)
 {
 	// return number of rows of array as if it was a two dimensional array - 0 = not an array		
 	lasterror = ERROR_NONE;
-	if (vars[varnum].type == T_ARRAY || vars[varnum].type == T_STRARRAY)
-	{
-		return(vars[varnum].value.arr->ydim);
+	variable *v = getvfromnum(varnum,false);
+	if(v) {
+		if (v->type == T_ARRAY || v->type == T_STRARRAY)
+		{
+			return(v->value.arr->ydim);
+		} else {
+			lasterror = ERROR_NOTARRAY;
+		}
 	} else {
-		lasterror = ERROR_NOTARRAY;
+		lasterror = ERROR_NOSUCHVARIABLE;
 	}
 	return(0);
 }
@@ -242,42 +290,57 @@ int Variables::arraysizey(int varnum)
 void Variables::arraysetfloat(int varnum, int index, double value)
 {
 	lasterror = ERROR_NONE;
-	if (vars[varnum].type == T_ARRAY) {
-		if(index >= 0 && index < vars[varnum].value.arr->size) {
-			vars[varnum].value.arr->data.fdata[index] = value;
+	variable *v = getvfromnum(varnum,false);
+	if(v) {
+		if (v->type == T_ARRAY) {
+			if(index >= 0 && index < v->value.arr->size) {
+				v->value.arr->data.fdata[index] = value;
+			} else {
+				lasterror = ERROR_ARRAYINDEX;
+			}
 		} else {
-			lasterror = ERROR_ARRAYINDEX;
+			lasterror = ERROR_NOTARRAY;
 		}
 	} else {
-		lasterror = ERROR_NOTARRAY;
+		lasterror = ERROR_NOSUCHVARIABLE;
 	}
 }
 
 void Variables::array2dsetfloat(int varnum, int x, int y, double value)
 {
 	lasterror = ERROR_NONE;
-	if (vars[varnum].type == T_ARRAY) {
-		if(x >= 0 && x < vars[varnum].value.arr->xdim && y >= 0 && y < vars[varnum].value.arr->ydim ) {
-			vars[varnum].value.arr->data.fdata[x * vars[varnum].value.arr->ydim + y] = value;
+	variable *v = getvfromnum(varnum,false);
+	if(v) {
+		if (v->type == T_ARRAY) {
+			if(x >= 0 && x < v->value.arr->xdim && y >= 0 && y < v->value.arr->ydim ) {
+				v->value.arr->data.fdata[x * v->value.arr->ydim + y] = value;
+			} else {
+				lasterror = ERROR_ARRAYINDEX;
+			}
 		} else {
-			lasterror = ERROR_ARRAYINDEX;
+			lasterror = ERROR_NOTARRAY;
 		}
 	} else {
-		lasterror = ERROR_NOTARRAY;
+		lasterror = ERROR_NOSUCHVARIABLE;
 	}
 }
 
 double Variables::arraygetfloat(int varnum, int index)
 {
 	lasterror = ERROR_NONE;
-	if (vars[varnum].type == T_ARRAY) {
-		if(index >= 0 && index < vars[varnum].value.arr->size) {
-			return(vars[varnum].value.arr->data.fdata[index]);
+	variable *v = getvfromnum(varnum,false);
+	if(v) {
+		if (v->type == T_ARRAY) {
+			if(index >= 0 && index < v->value.arr->size) {
+				return(v->value.arr->data.fdata[index]);
+			} else {
+				lasterror = ERROR_ARRAYINDEX;
+			}
 		} else {
-			lasterror = ERROR_ARRAYINDEX;
+			lasterror = ERROR_NOTARRAY;
 		}
 	} else {
-		lasterror = ERROR_NOTARRAY;
+		lasterror = ERROR_NOSUCHVARIABLE;
 	}
 	return(0);
 }
@@ -285,14 +348,19 @@ double Variables::arraygetfloat(int varnum, int index)
 double Variables::array2dgetfloat(int varnum, int x, int y)
 {
 	lasterror = ERROR_NONE;
-	if (vars[varnum].type == T_ARRAY) {
-		if(x >= 0 && x < vars[varnum].value.arr->xdim && y >= 0 && y < vars[varnum].value.arr->ydim ) {
-			return(vars[varnum].value.arr->data.fdata[x * vars[varnum].value.arr->ydim + y]);
+	variable *v = getvfromnum(varnum,false);
+	if(v) {
+		if (v->type == T_ARRAY) {
+			if(x >= 0 && x < v->value.arr->xdim && y >= 0 && y < v->value.arr->ydim ) {
+				return(v->value.arr->data.fdata[x * v->value.arr->ydim + y]);
+			} else {
+				lasterror = ERROR_ARRAYINDEX;
+			}
 		} else {
-			lasterror = ERROR_ARRAYINDEX;
+			lasterror = ERROR_NOTARRAY;
 		}
 	} else {
-		lasterror = ERROR_NOTARRAY;
+		lasterror = ERROR_NOSUCHVARIABLE;
 	}
 	return(0);
 }
@@ -300,51 +368,66 @@ double Variables::array2dgetfloat(int varnum, int x, int y)
 void Variables::arraysetstring(int varnum, int index, char *value)
 {
 	lasterror = ERROR_NONE;
-	if (vars[varnum].type == T_STRARRAY) {
-		if(index >= 0 && index < vars[varnum].value.arr->size) {
-			if (vars[varnum].value.arr->data.sdata[index])
-			{
-				free(vars[varnum].value.arr->data.sdata[index]);
+	variable *v = getvfromnum(varnum,false);
+	if(v) {
+		if (v->type == T_STRARRAY) {
+			if(index >= 0 && index < v->value.arr->size) {
+				if (v->value.arr->data.sdata[index])
+				{
+					free(v->value.arr->data.sdata[index]);
+				}
+				v->value.arr->data.sdata[index] = value;
+			} else {
+				lasterror = ERROR_ARRAYINDEX;
 			}
-			vars[varnum].value.arr->data.sdata[index] = value;
 		} else {
-			lasterror = ERROR_ARRAYINDEX;
+			lasterror = ERROR_NOTSTRINGARRAY;
 		}
 	} else {
-		lasterror = ERROR_NOTSTRINGARRAY;
+		lasterror = ERROR_NOSUCHVARIABLE;
 	}
 }
 
 void Variables::array2dsetstring(int varnum, int x, int y, char *value)
 {
 	lasterror = ERROR_NONE;
-	if (vars[varnum].type == T_STRARRAY) {
-		if(x >= 0 && x < vars[varnum].value.arr->xdim && y >= 0 && y < vars[varnum].value.arr->ydim ) {
-			int index = x * vars[varnum].value.arr->ydim + y;
-			if (vars[varnum].value.arr->data.sdata[index])
-			{
-				free(vars[varnum].value.arr->data.sdata[index]);
+	variable *v = getvfromnum(varnum,false);
+	if(v) {
+		if (v->type == T_STRARRAY) {
+			if(x >= 0 && x < v->value.arr->xdim && y >= 0 && y < v->value.arr->ydim ) {
+				int index = x * v->value.arr->ydim + y;
+				if (v->value.arr->data.sdata[index])
+				{
+					free(v->value.arr->data.sdata[index]);
+				}
+				v->value.arr->data.sdata[index] = value;
+			} else {
+				lasterror = ERROR_ARRAYINDEX;
 			}
-			vars[varnum].value.arr->data.sdata[index] = value;
 		} else {
-			lasterror = ERROR_ARRAYINDEX;
+			lasterror = ERROR_NOTSTRINGARRAY;
 		}
 	} else {
-		lasterror = ERROR_NOTSTRINGARRAY;
+		lasterror = ERROR_NOSUCHVARIABLE;
 	}
 }
 
 char *Variables::arraygetstring(int varnum, int index)
 {
 	lasterror = ERROR_NONE;
-	if (vars[varnum].type == T_STRARRAY) {
-		if(index >= 0 && index < vars[varnum].value.arr->size) {
-			return(vars[varnum].value.arr->data.sdata[index]);
+	variable *v = getvfromnum(varnum,false);
+	if(v) {
+		if (v->type == T_STRARRAY) {
+			if(index >= 0 && index < v->value.arr->size) {
+				return(v->value.arr->data.sdata[index]);
+			} else {
+				lasterror = ERROR_ARRAYINDEX;
+			}
 		} else {
-			lasterror = ERROR_ARRAYINDEX;
+			lasterror = ERROR_NOTSTRINGARRAY;
 		}
 	} else {
-		lasterror = ERROR_NOTSTRINGARRAY;
+		lasterror = ERROR_NOSUCHVARIABLE;
 	}
 	return(NULL);
 }
@@ -352,15 +435,20 @@ char *Variables::arraygetstring(int varnum, int index)
 char *Variables::array2dgetstring(int varnum, int x, int y)
 {
 	lasterror = ERROR_NONE;
-	if (vars[varnum].type == T_STRARRAY) {
-		if(x >= 0 && x < vars[varnum].value.arr->xdim && y >= 0 && y < vars[varnum].value.arr->ydim ) {
-			int index = x * vars[varnum].value.arr->ydim + y;
-			return(vars[varnum].value.arr->data.sdata[index]);
+	variable *v = getvfromnum(varnum,false);
+	if(v) {
+		if (v->type == T_STRARRAY) {
+			if(x >= 0 && x < v->value.arr->xdim && y >= 0 && y < v->value.arr->ydim ) {
+				int index = x * v->value.arr->ydim + y;
+				return(v->value.arr->data.sdata[index]);
+			} else {
+				lasterror = ERROR_ARRAYINDEX;
+			}
 		} else {
-			lasterror = ERROR_ARRAYINDEX;
+			lasterror = ERROR_NOTSTRINGARRAY;
 		}
 	} else {
-		lasterror = ERROR_NOTSTRINGARRAY;
+		lasterror = ERROR_NOSUCHVARIABLE;
 	}
 	return(NULL);
 }
